practices/test_checker/P1/Face/exercise1/ERROR/11.c

/* Here, you must include the required libraries */

void main(){
	/* Here, you must write the source code */
}
